# fe3spcinitdumper

./: .gitignore  Cargo.toml  LICENSE  Readme.md
src/: main.rs
